Added filer for page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Delphi 7</title>
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
-<body>
+<body style="background-color: #E4E5E7;">
 	<section class="none">cvfv</section>
 	<section class="header">
 		<div class="header-inner">
@@ -35,6 +35,47 @@
 			</div>
 		</div>
 	</section>
-	<!-- cnjdsn -->
+	<!-- next section -->
+	<section class="headerInfo">
+		<div class="headerInfo-inner">
+			<div class="info-links">
+				<a href="#">TOP SALES</a>
+				<a href="#">BRAND FOCUS</a>
+				<a href="#">HI-TECH</a>
+				<a href="#">BEST SELLERS</a>
+				<a href="#">PROJECTS</a>
+			</div>
+			<div class="sup-search">
+				<span class="sup-search__support">Support</span>
+				<div class="sup-search__search">
+					<img src="img/Search-Icon.jpg" alt="search">
+					<input type="text" placeholder="I`m looking for...">
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Carusel -->
+
+	<!-- Filter -->
+	<section class="filter">
+		<div class="sort">
+			<span>SORT BY</span>
+			<input type="text" class="radio">
+			<span class="sort__keyw">KEYWORDS</span>
+			<input type="text" placeholder="Tablet" class="sort__keyInput">
+		</div>
+		<div class="price">
+			<span>Price</span>
+			<input type="number">
+			<span> - </span>
+			<input type="number">
+			<span class="price__free">Free Shopping</span>
+		</div>
+		<div class="country">
+			<span>SHIP TO</span>
+			<input type="text">
+		</div>
+	</section>
+	<!--  -->
 </body>
 </html>
