--- a/index.html
+++ b/index.html
@@ -55,7 +55,15 @@
 		</div>
 	</section>
 	<!-- Carusel -->
-
+	<!-- Exemple Carusel -->
+	<section class="carusel">
+		<div class="carusel-inner1" id="btn1" onclick="nextSlide()">
+			<div class="carusel-inner__img1">img#1</div>
+		</div>
+		<div class="carusel-inner2" id="btn2"  onclick="nextSlide()">
+			<div class="carusel-inner__img2"">img#2</div>
+		</div>
+	</section>
 	<!-- Filter -->
 	<section class="filter">
 		<div class="sort">
@@ -78,4 +86,5 @@
 	</section>
 	<!--  -->
 </body>
+<script src="js/carusel.js"></script>
 </html>
