--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 	
 	<section class = "slider">
 		<div class = "slider-inner" id = "slider">
-			<div class = "slider-item" style = "background-image: url(img/slide1.jpg)"></div>
+			<div class="slider-item" style = "background-image: url(img/slide1.jpg)"></div>
 			<div class = "slider-item" style = "background-image: url(img/slide2.jpg)"></div>
 			<div class = "slider-item" style = "background-image: url(img/slide3.jpg)"></div>
 			<div class = "slider-item" style = "background-image: url(img/slide4.jpg)"></div>				
 		</div>
-		<img src="img/caret-left.png" class = "arrow arrow--left" onclick = "backSlide()" id="prev">
-		<img src="img/caret-right.png" class = "arrow arrow--right" onclick = "nextSlide()" id="next">
+		<img src="img/caret-symbol.png" class = "arrow arrow--left" onclick = "backSlide()" id="prev">
+		<img src="img/caret-symbol.png" class = "arrow arrow--right" onclick = "nextSlide()" id="next">
 		<div class = "slider-ind">
 			<div class = "slider-ind__slide active" onclick="setSlidebyIndicator(0)"></div>
 			<div class = "slider-ind__slide" onclick="setSlidebyIndicator(1)"></div>
