--- a/index.html
+++ b/index.html
@@ -97,8 +97,36 @@
 	</section>
 	<!-- Content -->
 	<section class="content">
-		<div class="content-filter"></div>
-		<div class="content-inner"></div>
+		<div class="content-filter">a</div>
+		<div class="content-inner">
+			<div class="content-cart">
+				<div class="content-cart__img"></div>
+				<div class="content-cart__title">
+					Lorem ipsum dolor sit amet.
+				</div>
+				<div class="content-cart__subtitle">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur in magnam itaque nulla, cupiditate soluta debitis iure vero. Adipisci, vero.
+				</div>
+			</div>
+			<div class="content-cart">
+				<div class="content-cart__img"></div>
+				<div class="content-cart__title">
+					Lorem ipsum dolor sit amet.
+				</div>
+				<div class="content-cart__subtitle">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur in magnam itaque nulla, cupiditate soluta debitis iure vero. Adipisci, vero.
+				</div>
+			</div>
+			<div class="content-cart">
+				<div class="content-cart__img"></div>
+				<div class="content-cart__title">
+					Lorem ipsum dolor sit amet.
+				</div>
+				<div class="content-cart__subtitle">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur in magnam itaque nulla, cupiditate soluta debitis iure vero. Adipisci, vero.
+				</div>
+			</div>
+		</div>
 	</section>
 </body>
 <script src="js/slider.js"></script>
