--- a/public/index.html
+++ b/public/index.html
@@ -41,11 +41,11 @@
 	<section class="headerInfo">
 		<div class="headerInfo-inner">
 			<div class="info-links">
-				<a href="#" ng-sref = "home">TOP SALES</a>
-				<a href="#">BRAND FOCUS</a>
-				<a href="#">HI-TECH</a>
-				<a href="#">BEST SELLERS</a>
-				<a href="#">PROJECTS</a>
+				<div href="#" class="link">TOP SALES</div>
+				<div href="#" class="link">BRAND FOCUS</div>
+				<div href="#" class="link">HI-TECH</div>
+				<div href="#">BEST SELLERS</div>
+				<div href="#">PROJECTS</div>
 			</div>
 			<div class="sup-search">
 				<span class="sup-search__support">Support</span>
@@ -55,6 +55,11 @@
 				</div>
 			</div>
 		</div>
+	</section>
+	<!-- dropdown menu -->
+
+	<section class="newmenu" id="newmenu">
+		csds
 	</section>
 	<!-- Carusel -->
 	
