added new slider item

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>Portland</title>
+    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
 <body style="background-color: #E4E5E7;">
 	<section class="backdrop" id="backdrop" onclick="backNone()"></section>
@@ -65,11 +66,71 @@
 	<!-- Carusel -->
 	
 	<section class = "slider">
-		<div class = "slider-inner" id = "slider-inner">
-			<div class="slider-item" style = "background-image: url(img/slide1.jpg)"></div>
-			<div class = "slider-item" style = "background-image: url(img/slide2.jpg)"></div>
-			<div class = "slider-item" style = "background-image: url(img/slide3.jpg)"></div>
-			<div class = "slider-item" style = "background-image: url(img/slide4.jpg)"></div>			
+		<div class = "slider-inner" id = "slider">
+			<div class="slider-item" style = "background-image: url(img/slider1.jpg)">
+				<div class="slider-item__inner">
+					<div class="slider-item__start">
+						<div class="slider-item__title">
+							iPhone 6 32Gb <br> Black
+						</div>
+						<div class="slider-item__subtitle">
+							At first, for some time, I was not able to answer him one word; but as he had taken me in his arms I held fast by him, or I should have fallen to the ground.
+						</div>
+						<div class="slider-item__btn">
+							<button>Bay now</button>
+						</div>
+					</div>
+					<img src="img/iphone6.png" alt="iphone6" class="slider-item__end">
+				</div>
+			</div>
+			<div class = "slider-item" style = "background-image: url(img/slider1.jpg)">
+				<div class="slider-item__inner">
+					<div class="slider-item__start">
+						<div class="slider-item__title">
+							iPhone 6 32Gb <br> Black
+						</div>
+						<div class="slider-item__subtitle">
+							At first, for some time, I was not able to answer him one word; but as he had taken me in his arms I held fast by him, or I should have fallen to the ground.
+						</div>
+						<div class="slider-item__btn">
+							<button>Bay now</button>
+						</div>
+					</div>
+					<img src="#" alt="iphone6" class="slider-item__end">
+				</div>
+			</div>
+			<div class = "slider-item" style = "background-image: url(img/slider1.jpg)">
+				<div class="slider-item__inner">
+					<div class="slider-item__start">
+						<div class="slider-item__title">
+							iPhone 6 32Gb <br> Black
+						</div>
+						<div class="slider-item__subtitle">
+							At first, for some time, I was not able to answer him one word; but as he had taken me in his arms I held fast by him, or I should have fallen to the ground.
+						</div>
+						<div class="slider-item__btn">
+							<button>Bay now</button>
+						</div>
+					</div>
+					<img src="#" alt="iphone6" class="slider-item__end">
+				</div>
+			</div>
+			<div class = "slider-item" style = "background-image: url(img/slider1.jpg)">
+				<div class="slider-item__inner">
+					<div class="slider-item__start">
+						<div class="slider-item__title">
+							iPhone 6 32Gb <br> Black
+						</div>
+						<div class="slider-item__subtitle">
+							At first, for some time, I was not able to answer him one word; but as he had taken me in his arms I held fast by him, or I should have fallen to the ground.
+						</div>
+						<div class="slider-item__btn">
+							<button>Bay now</button>
+						</div>
+					</div>
+					<img src="#" alt="iphone6" class="slider-item__end">
+				</div>
+			</div>			
 		</div>
 		<img src="img/caret-symbol.png" class = "arrow arrow--left" onclick = "backSlide()" id="prev">
 		<img src="img/caret-symbol.png" class = "arrow arrow--right" onclick = "nextSlide()" id="next">
