--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
 							At first, for some time, I was not able to answer him one word; but as he had taken me in his arms I held fast by him, or I should have fallen to the ground.
 						</div>
 						<div class="slider-item__btn">
-							<button>Bay now</button>
+							Bay now
 						</div>
 					</div>
 					<img src="img/iphone6.png" alt="iphone6" class="slider-item__end">
@@ -93,7 +93,7 @@
 							At first, for some time, I was not able to answer him one word; but as he had taken me in his arms I held fast by him, or I should have fallen to the ground.
 						</div>
 						<div class="slider-item__btn">
-							<button>Bay now</button>
+							Bay now
 						</div>
 					</div>
 					<img src="#" alt="iphone6" class="slider-item__end">
@@ -109,7 +109,7 @@
 							At first, for some time, I was not able to answer him one word; but as he had taken me in his arms I held fast by him, or I should have fallen to the ground.
 						</div>
 						<div class="slider-item__btn">
-							<button>Bay now</button>
+							Bay now
 						</div>
 					</div>
 					<img src="#" alt="iphone6" class="slider-item__end">
@@ -125,7 +125,7 @@
 							At first, for some time, I was not able to answer him one word; but as he had taken me in his arms I held fast by him, or I should have fallen to the ground.
 						</div>
 						<div class="slider-item__btn">
-							<button>Bay now</button>
+							Bay now
 						</div>
 					</div>
 					<img src="#" alt="iphone6" class="slider-item__end">
