--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <body style="background-color: #E4E5E7;">
 	<section class="backdrop" id="backdrop" onclick="backNone()"></section>
 	<section class="mobile" id="mobile">cvfv</section>
-	<section class="header">
+	<section class="header" id="header">
 		<div class="header-inner">
 			<div class="header-logo">
 				<img src="img/menu.svg" alt="menu" class="menu-icon" id="menu-icon" onclick="menu()">
@@ -40,7 +40,7 @@
 		</div>
 	</section>
 	<!-- next section -->
-	<section class="headerInfo">
+	<section class="headerInfo" id="headerInfo">
 		<div class="headerInfo-inner">
 			<div class="info-links">
 				<div href="#" class="link">TOP SALES</div>
@@ -157,5 +157,6 @@
 
 <script src="js/slider.js"></script>
 <script src="js/menu.js"></script>
+<script src="js/scroll.js"></script>
 
 </html>
