--- a/public/index.html
+++ b/public/index.html
@@ -158,5 +158,6 @@
 <script src="js/slider.js"></script>
 <script src="js/menu.js"></script>
 <script src="js/scroll.js"></script>
+<script src="js/dropdown.js"></script>
 
 </html>
