--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,33 @@
     <link rel="stylesheet" href="style/all.css">
     <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <title>Portland</title>
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
 <body style="background-color: #E4E5E7;">
+	<section class="preloader" id="preloader">
+		<div class="loader">
+			<div class="cssload-thecube">
+				<div class="cssload-cube cssload-c1"></div>
+				<div class="cssload-cube cssload-c2"></div>
+				<div class="cssload-cube cssload-c4"></div>
+				<div class="cssload-cube cssload-c3"></div>
+			</div>
+		</div>
+		
+		<!-- <div class="loader"></div> -->
+	</section>
 	<section class="backdrop" id="backdrop" onclick="backNone()"></section>
 	<section class="mobile" id="mobile">cvfv</section>
+	<section class="sign-in" id="sign-in" onclick="signIn();">
+		<div id="sign-in__div">
+			<input type="text" placeholder="login" class="sign-in__login">
+			<input type="password" class="sign-in__password">
+			<button class="btn__sign">Sign In</button>
+		</div>
+	</section>
+	
 	<section class="header" id="header">
 		<div class="header-inner">
 			<div class="header-logo">
@@ -21,7 +42,7 @@
 				<span>Izbasarov</span>
 			</div>
 			<div class="header-link">
-				<a>Home</a>
+				<a href="#">Home</a>
 				<a href="#">Devices</a>
 				<a href="#">Delivery & Payment</a>
 				<a href="#">Guarantee</a>
@@ -35,7 +56,7 @@
 					<div class="header-auth-cart__sub" ui-sref ="basket">CART</div>
 					<div class="header-auth-cart__num" ui-sref ="basket">0</div>
 				</div>
-				<div class="header-auth-sign">SIGN IN</div>
+				<div class="header-auth-sign" onclick="signIn()">SIGN IN</div>
 			</div>
 		</div>
 	</section>
@@ -145,6 +166,34 @@
 	<ui-view>
 		
 	</ui-view>
+
+	<section class="footer">
+		<div class="footer__links">
+			<span>Izbasarov</span>
+			<div class="footer__link">
+				<a href="#">Home</a>
+				<a href="#">Devices</a>
+				<a href="#">Delivery & Payment</a>
+				<a href="#">Guarantee</a>
+				<a href="#">About Us</a>
+			</div>
+			<div class="footer__social">
+				<img src="img/twitter.svg" alt="twitter">
+				<img src="img/facebook.svg" alt="facebook">
+				<img src="img/google-plus.svg" alt="google-plus">
+			</div>
+		</div>
+		<div class="footer__border"></div>
+		<div class="footer__item">
+			<div class="footer__subtitle">
+				She gave my mother such a turn, that I have always been convinced I am indebted to Miss Betsey for having been born on a Friday.
+			</div>
+			<div class="footer__privacy">
+				<span>Privacy Policy</span>
+				<div>Terms and Conditions</div>
+			</div>
+		</div>
+	</section>
 </body>
 <script type="text/javascript" src="/js/vendor/ng.min.js"></script>
 <script type="text/javascript" src="/js/vendor/ng-route.min.js"></script>
@@ -155,9 +204,12 @@
 <script type="text/javascript" src="/js/controllers/home.js"></script>
 <script type="text/javascript" src="/js/controllers/basket.js"></script>
 
+<!-- default js -->
 <script src="js/slider.js"></script>
 <script src="js/menu.js"></script>
 <script src="js/scroll.js"></script>
 <script src="js/dropdown.js"></script>
+<script src="js/preloader.js"></script>
+<script src="js/sign.js"></script>
 
 </html>
